// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stream -- renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Stream
    streamerName="irisheffects"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Placeholder
          fullHeight={true}
          fullWidth={true}
          hidden={false}
        />,
        <div
          className="stream__container"
        >
          <iframe
            className="stream__frame stream__frame--hidden"
            height="100%"
            onLoad={[Function]}
            scrolling="no"
            src="//player.twitch.tv/?channel=irisheffects&muted=true"
            width="100%"
          />
        </div>,
      ],
      "className": "stream stream--default",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fullHeight": true,
          "fullWidth": true,
          "hidden": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <iframe
            className="stream__frame stream__frame--hidden"
            height="100%"
            onLoad={[Function]}
            scrolling="no"
            src="//player.twitch.tv/?channel=irisheffects&muted=true"
            width="100%"
          />,
          "className": "stream__container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "stream__frame stream__frame--hidden",
            "height": "100%",
            "onLoad": [Function],
            "scrolling": "no",
            "src": "//player.twitch.tv/?channel=irisheffects&muted=true",
            "width": "100%",
          },
          "ref": null,
          "rendered": null,
          "type": "iframe",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Placeholder
            fullHeight={true}
            fullWidth={true}
            hidden={false}
          />,
          <div
            className="stream__container"
          >
            <iframe
              className="stream__frame stream__frame--hidden"
              height="100%"
              onLoad={[Function]}
              scrolling="no"
              src="//player.twitch.tv/?channel=irisheffects&muted=true"
              width="100%"
            />
          </div>,
        ],
        "className": "stream stream--default",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fullHeight": true,
            "fullWidth": true,
            "hidden": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <iframe
              className="stream__frame stream__frame--hidden"
              height="100%"
              onLoad={[Function]}
              scrolling="no"
              src="//player.twitch.tv/?channel=irisheffects&muted=true"
              width="100%"
            />,
            "className": "stream__container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "stream__frame stream__frame--hidden",
              "height": "100%",
              "onLoad": [Function],
              "scrolling": "no",
              "src": "//player.twitch.tv/?channel=irisheffects&muted=true",
              "width": "100%",
            },
            "ref": null,
            "rendered": null,
            "type": "iframe",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Stream -- renders as the focused stream 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Stream
    focused={true}
    streamerName="irisheffects"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Placeholder
          fullHeight={true}
          fullWidth={true}
          hidden={false}
        />,
        <div
          className="stream__container"
        >
          <iframe
            className="stream__frame stream__frame--hidden"
            height="100%"
            onLoad={[Function]}
            scrolling="no"
            src="//player.twitch.tv/?channel=irisheffects&muted=true"
            width="100%"
          />
        </div>,
      ],
      "className": "stream stream--focused",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fullHeight": true,
          "fullWidth": true,
          "hidden": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <iframe
            className="stream__frame stream__frame--hidden"
            height="100%"
            onLoad={[Function]}
            scrolling="no"
            src="//player.twitch.tv/?channel=irisheffects&muted=true"
            width="100%"
          />,
          "className": "stream__container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "stream__frame stream__frame--hidden",
            "height": "100%",
            "onLoad": [Function],
            "scrolling": "no",
            "src": "//player.twitch.tv/?channel=irisheffects&muted=true",
            "width": "100%",
          },
          "ref": null,
          "rendered": null,
          "type": "iframe",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Placeholder
            fullHeight={true}
            fullWidth={true}
            hidden={false}
          />,
          <div
            className="stream__container"
          >
            <iframe
              className="stream__frame stream__frame--hidden"
              height="100%"
              onLoad={[Function]}
              scrolling="no"
              src="//player.twitch.tv/?channel=irisheffects&muted=true"
              width="100%"
            />
          </div>,
        ],
        "className": "stream stream--focused",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fullHeight": true,
            "fullWidth": true,
            "hidden": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <iframe
              className="stream__frame stream__frame--hidden"
              height="100%"
              onLoad={[Function]}
              scrolling="no"
              src="//player.twitch.tv/?channel=irisheffects&muted=true"
              width="100%"
            />,
            "className": "stream__container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "stream__frame stream__frame--hidden",
              "height": "100%",
              "onLoad": [Function],
              "scrolling": "no",
              "src": "//player.twitch.tv/?channel=irisheffects&muted=true",
              "width": "100%",
            },
            "ref": null,
            "rendered": null,
            "type": "iframe",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
